--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -76,4 +76,12 @@
         <servlet-name>userservlet</servlet-name>
         <url-pattern>/userservlet</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>search</servlet-name>
+        <servlet-class>SearchServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>search</servlet-name>
+        <url-pattern>/search</url-pattern>
+    </servlet-mapping>
 </web-app>
